--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
   "coloredlogs",
   "aio_pika",
   "httpx",
-  "tenacity"
+  "tenacity",
+  "watchfiles",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
